tests/neg/override-multi-file-error/B.scala
class B extends A:
  override def foo: String = "0"   // error

